--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,11 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Install OS build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential python3
+
       - name: Install pnpm
         uses: pnpm/action-setup@v2
         with:
@@ -22,6 +27,9 @@ jobs:
 
       - name: 📦 Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Rebuild better-sqlite3 native bindings
+        run: pnpm rebuild better-sqlite3
 
       - name: 🛠️ Build
         run: pnpm run build
